# gate0

./: .gitignore  Cargo.toml  README.md  SECURITY.md  all_policies.txt  proptest.toml
benches/: evaluation.rs
docs/: SECURITY_MODEL.md
gatebridge/: README.md  SEMANTICS.md  example_policy.yaml  test_request.json
gatebridge/src/: ast.rs  explain.rs  main.rs  reference_eval.rs  shadow.rs  translate.rs
src/: condition.rs  error.rs  policy.rs  target.rs
tests/: properties.rs
